tests/snapshots/test_runner__tests__compiler__tokenize__invalid_characater_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let x : String = ~

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/tokenize/invalid_characater_1.kk:1:18
  │
1 │ let x : String = ~
  │                  ^ Syntax error: not expecting `~` here
  │
  = Note that `~` is not used anywhere in the syntax of KK.

    We found this error when we are trying to parse a Expression.
    Examples of Expression are:

    Example #1:

      123

    Example #2:

      "hello world"

    Example #3:

      { x: 3 }

    Example #4:

      [ 2 ]

    Example #5:

      Some(true)
